--- a/themes/bootstrapndlc/scss/theme/_custom.scss
+++ b/themes/bootstrapndlc/scss/theme/_custom.scss
@@ -469,7 +469,7 @@ td, th {
   .ribbon {
     margin-left: 0;
     width: 900px;
-    height: 147px;
+    height: 80%;
     border: 1px solid #432f3c;
     background-color: rgba(67, 47, 44, .1) !important;
     }
